[tool.poetry]
name = "messengers-loggers"
version = "0.1.4"
description = "Loggers for sending log to messengers"
authors = ["arck1 <a.v.rakhimov@gmail.com>"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.8"

requests = "^2.25.1"

pytest = {version = "^5.4.3", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
test = ["pytest"]